--- a/test2.html
+++ b/test2.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Search</title>
         <link type="text/css" href="css/smoothness/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
+        <link type="text/css" href="css/search.css" rel="stylesheet" />
         <script src="js/raphael-min.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.8.21.custom.min.js"></script>
@@ -11,6 +12,12 @@
         <script src="js/search-problem.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="holder"></div>
+        <div>
+            <div id="holder"></div>
+            <div id="pseudocode">
+            <ul id="codeguide"></ul>
+                
+            </div>
+        </div>
     </body>
 </html>
