--- a/test2.html
+++ b/test2.html
@@ -4,10 +4,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Search</title>
         <link type="text/css" href="css/smoothness/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
+        <link type="text/css" href="css/jquery.cluetip.css" rel="stylesheet" />
         <link type="text/css" href="css/search.css" rel="stylesheet" />
         <script src="js/raphael-min.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.8.21.custom.min.js"></script>
+        <script src="js/jquery.cluetip.min.js" type="text/javascript"></script>
         <script src="js/raphael-utils.js" type="text/javascript"></script>
         <script src="js/search-problem.js" type="text/javascript"></script>
     </head>
@@ -15,8 +17,13 @@
         <div>
             <div id="holder"></div>
             <div id="pseudocode">
-            <ul id="codeguide"></ul>
-                
+            <ul id="codeguide"></ul><br>
+            <div id="buttons">
+            <button id="reached_goal">Reached Goal</button>
+            <button id="not_goal">Not A Goal</button>
+            </div>
+            <br>
+            <button id="continue_alg">Continue</button>
             </div>
         </div>
     </body>
