--- a/test2.html
+++ b/test2.html
@@ -11,19 +11,22 @@
 		<script type="text/javascript" src="js/jquery-ui-1.8.21.custom.min.js"></script>
         <script src="js/jquery.cluetip.min.js" type="text/javascript"></script>
         <script src="js/raphael-utils.js" type="text/javascript"></script>
+        <script src="js/utils.js" type="text/javascript"></script>
         <script src="js/search-problem.js" type="text/javascript"></script>
     </head>
     <body>
         <div>
             <div id="holder"></div>
             <div id="pseudocode">
-            <ul id="codeguide"></ul><br>
-            <div id="buttons">
-            <button id="reached_goal">Reached Goal</button>
-            <button id="not_goal">Not A Goal</button>
-            </div>
-            <br>
-            <button id="continue_alg">Continue</button>
+                <input type="checkbox" id="pqsearch_showhints" value="1" checked>&nbsp; Show additional details
+about active line in algorithm
+                <ul id="codeguide"></ul><br>
+                <div id="buttons">
+                    <button id="reached_goal">Reached Goal</button>
+                    <button id="not_goal">Not A Goal</button>
+                 </div>
+                <br>
+                <button id="continue_alg">Continue</button>
             </div>
         </div>
     </body>
